name:                Distributed-code-complexity-check
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            
license:             BSD3
license-file:        LICENSE
author:              Abhimanyu Hazarika
maintainer:          
copyright:           
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , argon
                     , distributed-process
                     , network-transport-tcp
                     , distributed-process-simplelocalnet
                     , split
                     , MissingH
                     , process
                     , pipes
                     , pipes-safe
                     , silently
                     , directory
                     , time
  default-language:    Haskell2010

executable Distributed-code-complexity-check-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Distributed-code-complexity-check
  default-language:    Haskell2010

test-suite Distributed-code-complexity-check-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Distributed-code-complexity-check
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: 
